--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ var/
 .installed.cfg
 *.egg
 
+# Temp files
+.*.swp
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -60,6 +63,7 @@ target/
 .idea/
 CTFd/static/uploads
 CTFd/uploads
+CTFd/generators
 CTFd/plugins
 .data/
 .ctfd_secret_key
