Updated mysql image to ARM64. Changed CTFd 8000 port mapping to exposed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   ctfd:
     build: .
     restart: always
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     environment:
       - DATABASE_URL=mysql+pymysql://root@db/ctfd
     volumes:
@@ -15,7 +15,7 @@ services:
       - db
 
   db:
-    image: mysql
+    image: liupeng0518/mysql:5.7-arm64
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
     volumes:
